--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,6 +1,3 @@
 <h3>Welcome to Form Playground</h3>
 
-<button
-  (click)="onChkForm()"
-  type="button"
->Click Me</button>
+<button (click)="onChkForm()" type="button">Click Me</button>
