--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,44 +1,29 @@
 <hello name="{{ name }}"></hello>
 
-<button
-  (click)="onChkForm()"
-  type="button"
->Click Me</button>
-
 <div class="ui-g mb-3">
-	<div class="ui-g-12">
-		<p-tabView>
-			<p-tabPanel header="{{ 'componentLists' }}">
-				The story begins as Don Vito Corleone, the head of a New York Mafia family, overseeshis daughter's
-				wedding. His beloved son ichael has just come home from the war, but does not intend to become part of
-				his father's business. T hrough Michael's life the nature of the family business becomes clear. The
-				business of the family is just like the head of the family, kind and benevolent to those who give
-				respect, but given to ruthless violence whenever anything stands against the good of the family.
-			</p-tabPanel>
-			<p-tabPanel header="{{ 'periodSetting' }}">
-				Francis Ford Coppola's legendary continuation and sequel to his landmark 1972 film, The_Godfather
-				parallels the young Vito Corleone's rise with his son Michael's spiritual fall, deepening
-				The_Godfather's depiction of the dark side of the American dream. In the early 1900s, the child Vito
-				flees his Sicilian village for America after the local Mafia kills his family. Vito struggles to make a
-				living, legally or illegally, for his wife and growing brood in Little Italy, killing the local Black
-				Hand Fanucci after he demands his customary cut of the tyro's business. With Fanucci gone, Vito's
-				communal stature grows.
-			</p-tabPanel>
-		</p-tabView>
-	</div>
+  <div class="ui-g-12">
+    <p-tabView>
+      <p-tabPanel header="{{ 'componentLists' }}">
+        The story begins as Don Vito Corleone, the head of a New York Mafia
+        family, overseeshis daughter's wedding. His beloved son ichael has just
+        come home from the war, but does not intend to become part of his
+        father's business. T hrough Michael's life the nature of the family
+        business becomes clear. The business of the family is just like the head
+        of the family, kind and benevolent to those who give respect, but given
+        to ruthless violence whenever anything stands against the good of the
+        family.
+      </p-tabPanel>
+      <p-tabPanel header="{{ 'periodSetting' }}">
+        Francis Ford Coppola's legendary continuation and sequel to his landmark
+        1972 film, The_Godfather parallels the young Vito Corleone's rise with
+        his son Michael's spiritual fall, deepening The_Godfather's depiction of
+        the dark side of the American dream. In the early 1900s, the child Vito
+        flees his Sicilian village for America after the local Mafia kills his
+        family. Vito struggles to make a living, legally or illegally, for his
+        wife and growing brood in Little Italy, killing the local Black Hand
+        Fanucci after he demands his customary cut of the tyro's business. With
+        Fanucci gone, Vito's communal stature grows.
+      </p-tabPanel>
+    </p-tabView>
+  </div>
 </div>
-
-<button
-  (click)="onSave()"
-  type="button"
->Insert Sugar</button>
-<button
-  (click)="onRemove(2)"
-  type="button"
->Rem</button>
-
-<ul *ngFor="let test of allTest">
-	<li>{{ test.id }}</li>
-	<li>{{ test.foo }}</li>
-	<li>{{ test.bar }}</li>
-</ul>
